cdbs (0.4.43) unstable; urgency=low

  * Enable DEB_AUTO_UPDATE_DEBIAN_CONTROL when DEB_BUILD_OPTIONS
    contains cdbs-autoupdate. This allows globally enabling the feature
    (eg. on compiler farms), and still obey Debian Policy by default.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Jun 2006 23:02:17 +0200

cdbs (0.4.42) unstable; urgency=low

  * Corrected misspelled DEB_PYTHON_INSTALL_ARGS(_ALL)
    (python-distutils.mk) (closes: #373678)
  * Corrected automatic cdbs dependency version (python-distutils.mk)
    (closes: #373653, #373997)
  * Corrected error message (python-distutils.mk)
    (closes: #373653, #373873)

 -- Peter Eisentraut <petere@debian.org>  Fri, 16 Jun 2006 20:00:03 +0200

cdbs (0.4.41) unstable; urgency=low

  * Removed _cdbs_bootstrap variable
  * Propagate LDFLAGS (autotools-vars.mk, makefile-vars.mk)
  * Added qmake class (closes: #360589)
  * Honor DEB_PYTHON_COMPILE_VERSION when calling dh_python
    (python-distutils.mk) (closes: #369335)
  * Replaced most uses of := by = in makefiles.  This generally gives
    more reasonable behavior.
  * Added buildcore picture, and integrated it and depgraph into the
    documentation
  * Support for new Python policy (provided by Marc Dequènes)
    (python-distutils.mk) (closes: #373628)

 -- Peter Eisentraut <petere@debian.org>  Wed, 14 Jun 2006 19:30:43 +0200

cdbs (0.4.40) unstable; urgency=low

  * Acknowledge NMU (closes: #365085)
  * Added DEB_PYTHON_PACKAGES_EXCLUDE (python-distutils.mk)
    (closes: #365257)
  * cdbs-edit-patch: Avoid error message when creating new patch
  * Try patches at level 1 first, to avoid problems with patches that only
    create new files (simple-patchsys.mk) (closes: #365524)
  * Unset DEB_DBG_PACKAGE_ALL if some DEB_DBG_PACKAGE_pkg is set by user
    (debhelper.mk); test case in debhelper-6.sh
  * Set DEB_DBG_PACKAGE_pkg automatically if corresponding pkg exists
    (debhelper.mk) (closes: #365122); test case in debhelper-7.sh