@@ -3,8 +3,9 @@ cdbs (0.4.43) unstable; urgency=low
   * Enable DEB_AUTO_UPDATE_DEBIAN_CONTROL when DEB_BUILD_OPTIONS
     contains cdbs-autoupdate. This allows globally enabling the feature
     (eg. on compiler farms), and still obey Debian Policy by default.
+  * Add buildinfo rule. Closes: bug#202873.
 
- -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Jun 2006 23:02:17 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Sat, 17 Jun 2006 23:45:24 +0200
 
 cdbs (0.4.42) unstable; urgency=low
 
